# OmnifocusMCP

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  RALPH_TASK.md  RALPH_TASK_NEXT.md  RALPH_TASK_READ.md  RALPH_TASK_RUST.md  README.md  TESTING_NOTES.md  package.json
.cursor/ralph-scripts/: init-ralph.sh  ralph-common.sh  ralph-loop.sh  ralph-parallel.sh  ralph-retry.sh  ralph-setup.sh  stream-parser.sh
.cursor/rules/: jxa-scripting.mdc  python-conventions.mdc  quality-principles.mdc  testing-strategy.mdc  typescript-conventions.mdc
.github/workflows/: ci.yml  release-rust.yml
.ralph/: RALPH_TASK_v3_rust_implementation.md  RALPH_TASK_v5_api_parity.md  guardrails.md  progress.md  tasks.mtime  tasks.yaml
docs/: development-docker.md  install-python.md  install-rust.md  install-typescript.md
homebrew/: omnifocus-mcp.rb
python/: README.md  pyproject.toml
python/scripts/: smoke_test.py
python/src/omnifocus_mcp/: __init__.py  __main__.py  app.py  jxa.py  prompts.py  resources.py  server.py
python/src/omnifocus_mcp/tools/: folders.py  forecast.py  perspectives.py  projects.py  tags.py  tasks.py
python/tests/: conftest.py  test_docs.py  test_errors.py  test_integration.py  test_parsing.py  test_tool_schema_tasks.py  test_tools_read.py  test_tools_write.py
rust/: Cargo.toml  README.md
rust/examples/: smoke_test.rs
rust/src/: flexible_tags.rs  lib.rs  main.rs  prompts.rs  resources.rs  server.rs  types.rs
rust/src/tools/: folders.rs  folders_clean.rs  forecast.rs  mod.rs  perspectives.rs  projects.rs  tags.rs  tasks.rs  utility.rs
rust/tests/: integration_test.rs  prompts_test.rs  tools_read_test.rs  tools_write_test.rs
typescript/: README.md  package-lock.json
typescript/src/: index.ts  jxa.ts  prompts.ts  resources.ts  types.ts
typescript/src/tools/: folders.ts  forecast.ts  perspectives.ts  projects.ts  tags.ts  tasks.ts
typescript/tests/: docs.test.ts  errors.test.ts  integration.test.ts  tool_schema_tasks.test.ts  tools-happy.test.ts  tools-representative.test.ts
