[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnifocus-mcp"
version = "0.1.0"
description = "Model Context Protocol server for OmniFocus on macOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

[project.scripts]
omnifocus-mcp = "omnifocus_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["integration: requires running OmniFocus"]
