# criterion 1 research notes (rmcp v0.17.0, source: docs.rs + rust-sdk README/FEATURES)
# - tools registration: define tool methods in an impl annotated with `#[tool_router]`,
#   annotate each method with `#[tool(...)]`, store `ToolRouter<Self>` in server state,
#   and add `#[tool_handler] impl ServerHandler for ...` to auto-wire call/list handlers
# - prompts registration: use `#[prompt_router]` + `#[prompt(...)]` methods and
#   `#[prompt_handler] impl ServerHandler` to wire get_prompt/list_prompts
# - resources registration: implement `ServerHandler::list_resources`,
#   `ServerHandler::read_resource`, and optional `list_resource_templates` manually
#   (resource routing is trait-method based in rmcp docs)
# - stdio transport: `let service = server.serve(stdio()).await?; service.waiting().await?;`
# - tool parameter schemas: use `Parameters<T>` wrapper and derive
#   `Serialize`, `Deserialize`, and `JsonSchema` on `T`; rmcp generates tool schema from `T`

[package]
name = "omnifocus-mcp"
version = "1.1.7"
edition = "2021"
license = "MIT"

[dependencies]
rmcp = { version = "0.17", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[features]
integration = []

